[package]
name = "veruna-kernel"
version = "1.1.14"
edition = "2021"
description = "Kernel for Veruna project"
license = "MIT OR Apache-2.0"
authors = ["Alexander Averichev <averichev@yandex.ru>"]
keywords = ["veruna", "kernel"]
repository = "https://github.com/averichev/veruna-kernel"

[dependencies]
url = { version = "2.3.1" }